@@ -1259,17 +1259,17 @@ z80_long_int debug_modified_registers_list[256]={
 //Tabla de los registros modificados para opcodes con prefijo CB y tambien para DD/FD + CB
 z80_long_int debug_modified_registers_cb_list[256]={
     //0 RLC B
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
     //16 RL B
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
     //32 SLA B
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
     //48 SLL B
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
-    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
+    MOD_REG_B|MOD_REG_F,MOD_REG_C|MOD_REG_F,MOD_REG_D|MOD_REG_F,MOD_REG_E|MOD_REG_F,MOD_REG_H|MOD_REG_F,MOD_REG_L|MOD_REG_F,MOD_REG_F|MOD_REG_HL_MEM,MOD_REG_AF,
     //64 BIT 0,B
     MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,
     MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,
@@ -1283,29 +1283,29 @@ z80_long_int debug_modified_registers_cb_list[256]={
     MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,
     MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,MOD_REG_F,
     //128 RES 0,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //144 RES 2,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //160 RES 4,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //176 RES 6,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //192 SET 0,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //208 SET 2,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //224 SET 4,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
     //240 SET 6,B
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A,
-    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,0,MOD_REG_A
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A,
+    MOD_REG_B,MOD_REG_C,MOD_REG_D,MOD_REG_E,MOD_REG_H,MOD_REG_L,MOD_REG_HL_MEM,MOD_REG_A
 };
 
 //Tabla de los registros modificados para opcodes con prefijo ED
